feat: change return error code (#6220)
Co-authored-by: Jina Dev Bot <dev-bot@jina.ai>

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -106,7 +106,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.8]
+        python-version: ["3.10"]
         protobuf-version: ['==3.19.6', '']
     steps:
       - uses: actions/checkout@v2.5.0
@@ -127,7 +127,7 @@ jobs:
 
       - name: Build wheels with setuptools-golang-build-manylinux-wheel
         run: |
-          setuptools-golang-build-manylinux-wheels --pythons cp38-cp38
+          setuptools-golang-build-manylinux-wheels --pythons cp310-cp310
       - name: Prepare environment
         run: |
           docker build -f Dockerfiles/test-pip.Dockerfile -t jinaai/jina:test-pip .
@@ -138,7 +138,7 @@ jobs:
           if [[ "${{ matrix.protobuf-version }}" == "==3.19.6" ]]; then
             pip install -U protobuf${{ matrix.protobuf-version }} grpcio==1.47.5 grpcio-reflection==1.47.5 grpcio-health-checking==1.47.5
           else
-            pip install -U protobuf${{ matrix.protobuf-version }}
+            pip install -U protobuf${{ matrix.protobuf-version }} grpcio==1.65.5 grpcio-reflection==1.65.5 grpcio-health-checking==1.65.5
           fi
           jina
           export JINA_LOG_LEVEL="ERROR"
@@ -180,7 +180,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.8]
+        python-version: ["3.10"]
         protobuf-version: ['==3.19.6', '']
     steps:
       - uses: actions/checkout@v2.5.0
@@ -202,7 +202,7 @@ jobs:
 
       - name: Build wheels with setuptools-golang-build-manylinux-wheel
         run: |
-          setuptools-golang-build-manylinux-wheels --pythons cp38-cp38
+          setuptools-golang-build-manylinux-wheels --pythons cp310-cp310
       - name: Prepare environment
         run: |
           docker build -f Dockerfiles/test-pip.Dockerfile -t jinaai/jina:test-pip .
@@ -213,7 +213,7 @@ jobs:
           if [[ "${{ matrix.protobuf-version }}" == "==3.19.6" ]]; then
             pip install -U protobuf${{ matrix.protobuf-version }} grpcio==1.47.5 grpcio-reflection==1.47.5 grpcio-health-checking==1.47.5
           else
-            pip install -U protobuf${{ matrix.protobuf-version }}
+            pip install -U protobuf${{ matrix.protobuf-version }} grpcio==1.65.5 grpcio-reflection==1.65.5 grpcio-health-checking==1.65.5
           fi
           jina
           export JINA_LOG_LEVEL="ERROR"
@@ -281,9 +281,6 @@ jobs:
       matrix:
         include:
           # linux
-          - os: ubuntu-latest
-            python: '3.7'
-            python-manylinux-tag: "cp37-cp37m"
           - os: ubuntu-latest
             python: '3.8'
             python-manylinux-tag: "cp38-cp38"
@@ -451,7 +448,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.8]
+        python-version: ["3.10"]
         test-path: ${{fromJson(needs.prep-testbed.outputs.matrix)}}
     steps:
       - uses: actions/checkout@v2.5.0
@@ -473,7 +470,7 @@ jobs:
 
       - name: Build wheels with setuptools-golang-build-manylinux-wheel
         run: |
-          setuptools-golang-build-manylinux-wheels --pythons cp38-cp38
+          setuptools-golang-build-manylinux-wheels --pythons cp310-cp310
       - name: Prepare environment
         run: |
           docker build --build-arg DOCARRAY_VERSION="0.21.0" -f Dockerfiles/test-pip.Dockerfile -t jinaai/jina:test-pip .
@@ -482,6 +479,7 @@ jobs:
           WHEEL_FILE=$(ls dist/*whl)
           pip install "$WHEEL_FILE[all]" --no-cache-dir
           pip install docarray==0.21.0
+          pip install grpcio==1.65.5 grpcio-reflection==1.65.5 grpcio-health-checking==1.65.5
           jina
           export JINA_LOG_LEVEL="ERROR"
       - name: Test
@@ -503,7 +501,7 @@ jobs:
           files: "coverage.xml"
       - name: Upload coverage from test to Codecov
         uses: codecov/codecov-action@v3.1.1
-        if: steps.check_files.outputs.files_exists == 'true' && ${{ matrix.python-version }} == '3.8'
+        if: steps.check_files.outputs.files_exists == 'true' && ${{ matrix.python-version }} == '3.10'
         with:
           file: coverage.xml
           name: ${{ matrix.test-path }}-codecov
@@ -587,10 +585,10 @@ jobs:
       #        with:
       #          access_token: ${{ github.token }}
       - uses: actions/checkout@v2.5.0
-      - name: Set up Python 3.8
+      - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
-          python-version: 3.8
+          python-version: "3.10"
       - name: Test hubapp with hubpods
         run: |
           ./tests/jinahub/test_integration.sh
@@ -604,10 +602,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2.5.0
-      - name: Set up Python 3.8
+      - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
-          python-version: 3.8
+          python-version: "3.10"
       - name: Prepare enviroment
         run: |
           docker build --build-arg DOCARRAY_VERSION="0.21.0" -f Dockerfiles/test-pip.Dockerfile -t jinaai/jina:test-pip .
@@ -634,7 +632,7 @@ jobs:
           files: "coverage.xml"
       - name: Upload coverage from test to Codecov
         uses: codecov/codecov-action@v3.1.1
-        if: steps.check_files.outputs.files_exists == 'true' && ${{ matrix.python-version }} == '3.8'
+        if: steps.check_files.outputs.files_exists == 'true' && ${{ matrix.python-version }} == '3.10'
         with:
           file: coverage.xml
           name: ${{ matrix.test-path }}-codecov
@@ -646,10 +644,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2.5.0
-      - name: Set up Python 3.8
+      - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
-          python-version: 3.8
+          python-version: "3.10"
       - name: Prepare enviroment
         run: |
           docker build --build-arg DOCARRAY_VERSION="0.21.0" -f Dockerfiles/test-pip.Dockerfile -t jinaai/jina:test-pip .
@@ -676,7 +674,7 @@ jobs:
           files: "coverage.xml"
       - name: Upload coverage from test to Codecov
         uses: codecov/codecov-action@v3.1.1
-        if: steps.check_files.outputs.files_exists == 'true' && ${{ matrix.python-version }} == '3.8'
+        if: steps.check_files.outputs.files_exists == 'true' && ${{ matrix.python-version }} == '3.10'
         with:
           file: coverage.xml
           name: ${{ matrix.test-path }}-codecov
@@ -688,10 +686,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2.5.0
-      - name: Set up Python 3.8
+      - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
-          python-version: 3.8
+          python-version: "3.10"
       - name: Prepare enviroment
         run: |
           docker build --build-arg DOCARRAY_VERSION="0.21.0" -f Dockerfiles/test-pip.Dockerfile -t jinaai/jina:test-pip .
@@ -718,7 +716,7 @@ jobs:
           files: "coverage.xml"
       - name: Upload coverage from test to Codecov
         uses: codecov/codecov-action@v3.1.1
-        if: steps.check_files.outputs.files_exists == 'true' && ${{ matrix.python-version }} == '3.8'
+        if: steps.check_files.outputs.files_exists == 'true' && ${{ matrix.python-version }} == '3.10'
         with:
           file: coverage.xml
           name: ${{ matrix.test-path }}-codecov
@@ -730,10 +728,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2.5.0
-      - name: Set up Python 3.8
+      - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
-          python-version: 3.8
+          python-version: "3.10"
       - name: Prepare enviroment
         run: |
           docker build --build-arg DOCARRAY_VERSION="0.21.0" -f Dockerfiles/test-pip.Dockerfile -t jinaai/jina:test-pip .
@@ -761,7 +759,7 @@ jobs:
           files: "coverage.xml"
       - name: Upload coverage from test to Codecov
         uses: codecov/codecov-action@v3.1.1
-        if: steps.check_files.outputs.files_exists == 'true' && ${{ matrix.python-version }} == '3.8'
+        if: steps.check_files.outputs.files_exists == 'true' && ${{ matrix.python-version }} == '3.10'
         with:
           file: coverage.xml
           name: ${{ matrix.test-path }}-codecov
@@ -773,10 +771,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2.5.0
-      - name: Set up Python 3.8
+      - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
-          python-version: 3.8
+          python-version: "3.10"
       - name: Prepare enviroment
         run: |
           docker build --build-arg DOCARRAY_VERSION="0.21.0" -f Dockerfiles/test-pip.Dockerfile -t jinaai/jina:test-pip .
@@ -801,7 +799,7 @@ jobs:
           files: "coverage.xml"
       - name: Upload coverage from test to Codecov
         uses: codecov/codecov-action@v3.1.1
-        if: steps.check_files.outputs.files_exists == 'true' && ${{ matrix.python-version }} == '3.8'
+        if: steps.check_files.outputs.files_exists == 'true' && ${{ matrix.python-version }} == '3.10'
         with:
           file: coverage.xml
           name: ${{ matrix.test-path }}-codecov
@@ -813,10 +811,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2.5.0
-      - name: Set up Python 3.8
+      - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
-          python-version: 3.8
+          python-version: "3.10"
       - name: Prepare enviroment
         run: |
           docker build --build-arg DOCARRAY_VERSION="0.21.0" -f Dockerfiles/test-pip.Dockerfile -t jinaai/jina:test-pip .
@@ -839,7 +837,7 @@ jobs:
           files: "coverage.xml"
       - name: Upload coverage from test to Codecov
         uses: codecov/codecov-action@v3.1.1
-        if: steps.check_files.outputs.files_exists == 'true' && ${{ matrix.python-version }} == '3.8'
+        if: steps.check_files.outputs.files_exists == 'true' && ${{ matrix.python-version }} == '3.10'
         with:
           file: coverage.xml
           name: ${{ matrix.test-path }}-codecov
