--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,10 +23,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2.5.0
-      - name: Set up Python 3.8
+      - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
-          python-version: 3.8
+          python-version: "3.10"
       - name: Lint with flake8
         run: |
           pip install flake8
@@ -41,10 +41,10 @@ jobs:
       - uses: actions/checkout@v2.5.0
         with:
           fetch-depth: 0
-      - name: Set up Python 3.8
-        uses: actions/setup-python@v1
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v2
         with:
-          python-version: 3.8
+          python-version: "3.10"
       - id: file_changes
         uses: Ana06/get-changed-files@v1.2
       - name: docstring check with darglint and pydocstyle
@@ -58,10 +58,10 @@ jobs:
       - uses: actions/checkout@v2.5.0
         with:
           fetch-depth: 0
-      - name: Set up Python 3.8
+      - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
-          python-version: 3.8
+          python-version: "3.10"
       - id: file_changes
         uses: Ana06/get-changed-files@v1.2
       - name: check black
@@ -77,11 +77,11 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           ref: ${{ github.event.pull_request.head.sha }}
-      - name: Set up Python 3.8
+      - name: Set up Python 3.10
         uses: actions/setup-python@v4
         if: ${{ !github.event.pull_request.head.repo.fork }}
         with:
-          python-version: 3.8
+          python-version: "3.10"
       - name: Styling
         id: styling
         if: ${{ !github.event.pull_request.head.repo.fork }}
@@ -158,10 +158,10 @@ jobs:
 #        with:
 #          access_token: ${{ github.token }}
       - uses: actions/checkout@v2.5.0
-      - name: Set up Python 3.8
+      - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
-          python-version: 3.8
+          python-version: "3.10"
       - name: Test hubapp with hubpods
         run: |
           ./tests/jinahub/test_integration.sh
@@ -175,10 +175,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2.5.0
-      - name: Set up Python 3.8
+      - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
-          python-version: 3.8
+          python-version: "3.10"
       - name: Prepare enviroment
         run: |
           docker build --build-arg DOCARRAY_VERSION="0.21.0" -f Dockerfiles/test-pip.Dockerfile -t jinaai/jina:test-pip .
@@ -205,7 +205,7 @@ jobs:
           files: "coverage.xml"
       - name: Upload coverage from test to Codecov
         uses: codecov/codecov-action@v3.1.1
-        if: steps.check_files.outputs.files_exists == 'true' && ${{ matrix.python-version }} == '3.8'
+        if: steps.check_files.outputs.files_exists == 'true' && ${{ matrix.python-version }} == '3.10'
         with:
           file: coverage.xml
           name: ${{ matrix.test-path }}-codecov
@@ -217,10 +217,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2.5.0
-      - name: Set up Python 3.8
+      - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
-          python-version: 3.8
+          python-version: "3.10"
       - name: Prepare enviroment
         run: |
           docker build --build-arg DOCARRAY_VERSION="0.21.0" -f Dockerfiles/test-pip.Dockerfile -t jinaai/jina:test-pip .
@@ -247,7 +247,7 @@ jobs:
           files: "coverage.xml"
       - name: Upload coverage from test to Codecov
         uses: codecov/codecov-action@v3.1.1
-        if: steps.check_files.outputs.files_exists == 'true' && ${{ matrix.python-version }} == '3.8'
+        if: steps.check_files.outputs.files_exists == 'true' && ${{ matrix.python-version }} == '3.10'
         with:
           file: coverage.xml
           name: ${{ matrix.test-path }}-codecov
@@ -259,10 +259,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2.5.0
-      - name: Set up Python 3.8
+      - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
-          python-version: 3.8
+          python-version: "3.10"
       - name: Prepare enviroment
         run: |
           docker build --build-arg DOCARRAY_VERSION="0.21.0" -f Dockerfiles/test-pip.Dockerfile -t jinaai/jina:test-pip .
@@ -289,7 +289,7 @@ jobs:
           files: "coverage.xml"
       - name: Upload coverage from test to Codecov
         uses: codecov/codecov-action@v3.1.1
-        if: steps.check_files.outputs.files_exists == 'true' && ${{ matrix.python-version }} == '3.8'
+        if: steps.check_files.outputs.files_exists == 'true' && ${{ matrix.python-version }} == '3.10'
         with:
           file: coverage.xml
           name: ${{ matrix.test-path }}-codecov
@@ -301,7 +301,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2.5.0
-      - name: Set up Python 3.8
+      - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
           python-version: 3.8
@@ -332,7 +332,7 @@ jobs:
           files: "coverage.xml"
       - name: Upload coverage from test to Codecov
         uses: codecov/codecov-action@v3.1.1
-        if: steps.check_files.outputs.files_exists == 'true' && ${{ matrix.python-version }} == '3.8'
+        if: steps.check_files.outputs.files_exists == 'true' && ${{ matrix.python-version }} == '3.10'
         with:
           file: coverage.xml
           name: ${{ matrix.test-path }}-codecov
@@ -344,10 +344,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2.5.0
-      - name: Set up Python 3.8
+      - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
-          python-version: 3.8
+          python-version: "3.10"
       - name: Prepare enviroment
         run: |
           docker build --build-arg DOCARRAY_VERSION="0.21.0" -f Dockerfiles/test-pip.Dockerfile -t jinaai/jina:test-pip .
@@ -372,7 +372,7 @@ jobs:
           files: "coverage.xml"
       - name: Upload coverage from test to Codecov
         uses: codecov/codecov-action@v3.1.1
-        if: steps.check_files.outputs.files_exists == 'true' && ${{ matrix.python-version }} == '3.8'
+        if: steps.check_files.outputs.files_exists == 'true' && ${{ matrix.python-version }} == '3.10'
         with:
           file: coverage.xml
           name: ${{ matrix.test-path }}-codecov
@@ -385,10 +385,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2.5.0
-      - name: Set up Python 3.8
+      - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
-          python-version: 3.8
+          python-version: "3.10"
       - name: Prepare enviroment
         run: |
           docker build --build-arg DOCARRAY_VERSION="0.21.0" -f Dockerfiles/test-pip.Dockerfile -t jinaai/jina:test-pip .
@@ -411,7 +411,7 @@ jobs:
           files: "coverage.xml"
       - name: Upload coverage from test to Codecov
         uses: codecov/codecov-action@v3.1.1
-        if: steps.check_files.outputs.files_exists == 'true' && ${{ matrix.python-version }} == '3.8'
+        if: steps.check_files.outputs.files_exists == 'true' && ${{ matrix.python-version }} == '3.10'
         with:
           file: coverage.xml
           name: ${{ matrix.test-path }}-codecov
@@ -439,7 +439,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.8]
+        python-version: ["3.10"]
         protobuf-version: ['==3.19.6', '']
     steps:
       - uses: actions/checkout@v2.5.0
@@ -461,7 +461,7 @@ jobs:
 
       - name: Build wheels with setuptools-golang-build-manylinux-wheel
         run: |
-          setuptools-golang-build-manylinux-wheels --pythons cp38-cp38
+          setuptools-golang-build-manylinux-wheels --pythons cp310-cp310
       - name: Prepare environment
         run: |
           docker build -f Dockerfiles/test-pip.Dockerfile -t jinaai/jina:test-pip .
@@ -472,7 +472,7 @@ jobs:
           if [[ "${{ matrix.protobuf-version }}" == "==3.19.6" ]]; then
             pip install -U protobuf${{ matrix.protobuf-version }} grpcio==1.47.5 grpcio-reflection==1.47.5 grpcio-health-checking==1.47.5
           else
-            pip install -U protobuf${{ matrix.protobuf-version }}
+            pip install -U protobuf${{ matrix.protobuf-version }} grpcio==1.65.5 grpcio-reflection==1.65.5 grpcio-health-checking==1.65.5
           fi
           jina
           export JINA_LOG_LEVEL="ERROR"
@@ -499,7 +499,7 @@ jobs:
           files: "coverage.xml"
       - name: Upload coverage from test to Codecov
         uses: codecov/codecov-action@v3.1.1
-        if: steps.check_files.outputs.files_exists == 'true' && ${{ matrix.python-version }} == '3.8'
+        if: steps.check_files.outputs.files_exists == 'true' && ${{ matrix.python-version }} == '3.10'
         with:
           file: coverage.xml
           name: ${{ matrix.test-path }}-codecov
@@ -515,7 +515,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.8]
+        python-version: ["3.10"]
         protobuf-version: ['==3.19.6', '']
     steps:
       - uses: actions/checkout@v2.5.0
@@ -537,7 +537,7 @@ jobs:
 
       - name: Build wheels with setuptools-golang-build-manylinux-wheel
         run: |
-          setuptools-golang-build-manylinux-wheels --pythons cp38-cp38
+          setuptools-golang-build-manylinux-wheels --pythons cp310-cp310
       - name: Prepare environment
         run: |
           docker build -f Dockerfiles/test-pip.Dockerfile -t jinaai/jina:test-pip .
@@ -548,7 +548,7 @@ jobs:
           if [[ "${{ matrix.protobuf-version }}" == "==3.19.6" ]]; then
             pip install -U protobuf${{ matrix.protobuf-version }} grpcio==1.47.5 grpcio-reflection==1.47.5 grpcio-health-checking==1.47.5
           else
-            pip install -U protobuf${{ matrix.protobuf-version }}
+            pip install -U protobuf${{ matrix.protobuf-version }} grpcio==1.65.5 grpcio-reflection==1.65.5 grpcio-health-checking==1.65.5
           fi
           jina
           export JINA_LOG_LEVEL="ERROR"
@@ -568,7 +568,7 @@ jobs:
           files: "coverage.xml"
       - name: Upload coverage from test to Codecov
         uses: codecov/codecov-action@v3.1.1
-        if: steps.check_files.outputs.files_exists == 'true' && ${{ matrix.python-version }} == '3.8'
+        if: steps.check_files.outputs.files_exists == 'true' && ${{ matrix.python-version }} == '3.10'
         with:
           file: coverage.xml
           name: ${{ matrix.test-path }}-codecov
@@ -584,9 +584,6 @@ jobs:
       matrix:
         include:
           # linux
-          - os: ubuntu-latest
-            python: '3.7'
-            python-manylinux-tag: "cp37-cp37m"
           - os: ubuntu-latest
             python: '3.8'
             python-manylinux-tag: "cp38-cp38"
@@ -703,7 +700,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.8]
+        python-version: ["3.10"]
         test-path: ${{fromJson(needs.prep-testbed.outputs.matrix)}}
     steps:
       - uses: actions/checkout@v2.5.0
@@ -725,7 +722,7 @@ jobs:
 
       - name: Build wheels with setuptools-golang-build-manylinux-wheel
         run: |
-          setuptools-golang-build-manylinux-wheels --pythons cp38-cp38
+          setuptools-golang-build-manylinux-wheels --pythons cp310-cp310
       - name: Prepare environment
         run: |
           docker build --build-arg DOCARRAY_VERSION="0.21.0" -f Dockerfiles/test-pip.Dockerfile -t jinaai/jina:test-pip .
@@ -734,6 +731,7 @@ jobs:
           WHEEL_FILE=$(ls dist/*whl)
           pip install "$WHEEL_FILE[all]" --no-cache-dir
           pip install docarray==0.21.0
+          pip install grpcio==1.65.5 grpcio-reflection==1.65.5 grpcio-health-checking==1.65.5
           jina
           export JINA_LOG_LEVEL="ERROR"
       - name: Test
@@ -757,7 +755,7 @@ jobs:
           files: "coverage.xml"
       - name: Upload coverage from test to Codecov
         uses: codecov/codecov-action@v3.1.1
-        if: steps.check_files.outputs.files_exists == 'true' && ${{ matrix.python-version }} == '3.8'
+        if: steps.check_files.outputs.files_exists == 'true' && ${{ matrix.python-version }} == '3.10'
         with:
           file: coverage.xml
           name: ${{ matrix.test-path }}-codecov
@@ -802,10 +800,10 @@ jobs:
       fail-fast: false
     steps:
       - uses: actions/checkout@v2.5.0
-      - name: Set up Python 3.8
+      - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
-          python-version: 3.8
+          python-version: "3.10"
       - name: Prepare enviroment
         run: |
           python -m pip install --upgrade pip
